index.css
.bg-gray{
    background-color: lightgrey;
    font-family: Calibri, arial;
}

.main{
    background: lightgray;
    text-align: center;
    margin: 50px;
    padding: 20px;
}

h1{
    margin-bottom: 0px;
}

.header{
    margin: 50px;
}

.sun1{background:rgba(255,0,0,0.4);
    border-color: black;
    border-width: 1px;
    border-style: solid;
    border-radius: 10px;
    padding: 1em;
    box-shadow: 7px 7px 3px rgba(0,0,0, 0.3);
}

.sun2{background:rgba(0,0,255,0.4);
    border-color: black;
    border-width: 1px;
    border-style: solid;
    border-radius: 10px;
    padding: 1em;
    box-shadow: 7px 7px 3px rgba(0,0,0, 0.3);
}

.sun3{background:rgba(0,255,0,0.4);
    border-color: black;
    border-width: 1px;
    border-style: solid;
    border-radius: 10px;
    padding: 1em;
    box-shadow: 7px 7px 3px rgba(0,0,0, 0.3);
}

.splash-grid{
    display: grid;
    font-size: 40px;
    min-height: 200px;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-gap: 20px;
    justify-content: center;
    align-content: center;
}

a{color:black;}

a:hover{color:pink}

a:visited{color:#700070}

#counter{
    text-align: left;
}

